--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -260,7 +260,33 @@ Spring IOC容器不仅管理对象（bean）的实例化，还管理协作者（
 
 **选择创建的代理类型**
 
-一般来说当Spring使用<aop:scoped-proxy/>来创建代理时，
+一般来说当Spring使用<aop:scoped-proxy/>来创建代理时，会使用CGLIB。
+
+```
+CGLIB代理只拦截公共方法调用！不要在此类代理上调用非公共方法。它们不会委托给实际作用域目标对象。
+```
+
+或者，可以通过为<aop:scoped-proxy/>元素的proxy-target-class属性的值指定false，将spring容器配置为为此类作用域bean创建标准的基于JDK接口的代理。使用基于JDK接口的代理意味着您不需要在应用程序类路径中加入其他库。但是，它意味着作用域bean的类必须实现至少一个接口，并且所有注入作用域bean的合作者必须通过其接口之一引用bean。以下示例显示了基于接口的代理：
+
+
+
+```
+<!-- DefaultUserPreferences implements the UserPreferences interface -->
+<bean id="userPreferences" class="com.stuff.DefaultUserPreferences" scope="session">
+    <aop:scoped-proxy proxy-target-class="false"/>
+</bean>
+
+<bean id="userManager" class="com.stuff.UserManager">
+    <property name="userPreferences" ref="userPreferences"/>
+</bean>
+```
+##1.5.5 自定义作用域
+
+
+Bean的作用域范围是可以扩展的，
+
+
+
 
 
 
