--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -282,8 +282,13 @@ CGLIB代理只拦截公共方法调用！不要在此类代理上调用非公共
 ```
 ##1.5.5 自定义作用域
 
+Bean的作用域范围是可以扩展的，您可以定义自己的作用域，甚至重新定义现有作用域，尽管后者被认为是不好的做法，并且不能覆盖内置的单例和原型作用域。
 
-Bean的作用域范围是可以扩展的，
+**创建自定义作用域**
+
+要将自定义范围集成到Spring容器中，需要实现本节中描述的org.springframework.beans.factory.config.scope接口。有关如何实现自己的作用域的概念，请参阅Spring框架本身提供的作用域实现和作用域JavaDoc，后者更详细地解释了需要实现的方法。
+作用域接口有四种方法来从作用域中获取对象，将它们从作用域中移除，并让它们被销毁。
+例如，会话作用域实现返回会话作用域bean（如果它不存在，则在将其绑定到会话以供将来参考之后，该方法返回bean的新实例）。以下方法从基础作用域返回对象：
 
 
 
