--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -299,6 +299,12 @@ Object get(String name, ObjectFactory objectFactory)
 例如，会话作用域实现从基础会话中删除会话作用域bean。应返回对象，但如果找不到具有指定名称的对象，则可以返回空值。以下方法将对象从基础作用域中移除：
 
 
+```
+Object remove(String name)
+```
+
+
+
 
 
 
