--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -303,6 +303,16 @@ Object get(String name, ObjectFactory objectFactory)
 Object remove(String name)
 ```
 
+以下方法注册当作用域被销毁或作用域中的指定对象被销毁时应执行的回调：
+
+
+
+```
+void registerDestructionCallback(String name, Runnable destructionCallback)
+```
+
+以下方法获取基础作用域的会话标识符：
+
 
 
 
