--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -315,6 +315,12 @@ void registerDestructionCallback(String name, Runnable destructionCallback)
 
 
 
+```
+String getConversationId()
+```
+
+
+
 
 
 
