--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -319,6 +319,77 @@ void registerDestructionCallback(String name, Runnable destructionCallback)
 String getConversationId()
 ```
 
+对于每个作用域，这个标识符是不同的。对于会话范围的实现，此标识符可以是会话标识符。
+
+**使用自定义作用域**
+当你写好一个Scope的实现之后，需要通知Spring容器，下面是注册到Spring容器的核心方法：
+
+
+```
+void registerScope(String scopeName, Scope scope);
+```
+此方法在ConfigurableBeanFactory接口中，该接口可通过Spring附带的大多数具体应用程序上下文实现的BeanFactory属性获得。
+
+registerScope（..）方法的第一个参数是与作用域关联的唯一名称。在Spring容器本身中，此类名称的示例是singleton和prototype。registerScope（..）方法的第二个参数是要注册和使用的自定义作用域实现的实际实例。
+
+假设您编写自定义作用域实现，然后按照下一个示例所示注册它。
+
+
+```
+Scope threadScope = new SimpleThreadScope();
+beanFactory.registerScope("thread", threadScope);
+```
+
+接下来你可以创建使用自定义作用域的Bean：
+
+
+```
+<bean id="..." class="..." scope="thread">
+```
+使用自定义作用域实现，您不仅限于作用域的编程式注册。您还可以通过使用CustomScopeConfigurer类以声明方式进行作用域注册，如下示例所示：
+
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:aop="http://www.springframework.org/schema/aop"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/aop
+        https://www.springframework.org/schema/aop/spring-aop.xsd">
+
+    <bean class="org.springframework.beans.factory.config.CustomScopeConfigurer">
+        <property name="scopes">
+            <map>
+                <entry key="thread">
+                    <bean class="org.springframework.context.support.SimpleThreadScope"/>
+                </entry>
+            </map>
+        </property>
+    </bean>
+
+    <bean id="thing2" class="x.y.Thing2" scope="thread">
+        <property name="name" value="Rick"/>
+        <aop:scoped-proxy/>
+    </bean>
+
+    <bean id="thing1" class="x.y.Thing1">
+        <property name="thing2" ref="thing2"/>
+    </bean>
+
+</beans>
+```
+
+
+
+```
+当你在FactoryBean的实现中使用<aop:scoped-proxy/>时，是这个factory bean本身被代理，而不是他返回的对象被代理getObject()。
+
+```
+
+
+
 
 
 
