--- a/Core/1.6Customizing-the-Nature-of-a-Bean.md
+++ b/Core/1.6Customizing-the-Nature-of-a-Bean.md
@@ -351,7 +351,7 @@ Spring JMX 通知publisher|
 |ServletConfigAware|当前容器运行的ServletConfig，只在web-aware 的Spring ApplicationContext有效|
 |ServletContextAware|当前容器运行的ServletContext，只在web-aware 的Spring ApplicationContext有效|
 
-再次强调，使用这些接口将会把你的代码和Spring API相耦合，违背了控制反转原则。因此我们直推荐需要访问容器的基础架构bean中使用它们。
+再次强调，使用这些接口将会把你的代码和Spring API相耦合，违背了控制反转原则。因此我们只推荐需要访问容器的基础架构bean中使用它们。
 
 
 
