--- a/Core/1.10Classpath-Scanning-and-Managed-Components.md
+++ b/Core/1.10Classpath-Scanning-and-Managed-Components.md
@@ -4,7 +4,7 @@
 
 本节介绍通过扫描类路径隐式检测候选组件的选项。候选组件是与筛选条件相匹配的类，并在容器中注册了相应的bean定义。这样就不需要使用XML来执行bean注册。相反，您可以使用注释（例如@Component）、AspectJ类型表达式或您自己的自定义筛选条件来选择哪些类具有向容器注册的bean定义。
 
-    从Spring3.0开始，Spring JavaConfig项目提供的许多特性都是核心Spring框架的一部分。这允许您使用Java定义bean，而不是使用传统的XML文件。查看@Configuration、@Bean、@Import和@DependsOn注释，了解如何使用这些新功能的示例。
+>从Spring3.0开始，Spring JavaConfig项目提供的许多特性都是核心Spring框架的一部分。这允许您使用Java定义bean，而不是使用传统的XML文件。查看@Configuration、@Bean、@Import和@DependsOn注释，了解如何使用这些新功能的示例。
 
 ## 1.10.1 @Component和进一步的构造型注解
 
@@ -29,7 +29,8 @@ public @interface Service {
     // ....
 }
 ~~~
-    @Component会导致@Service和@Component一样被对待。
+
+>@Component会导致@Service和@Component一样被对待。
 
 你也可以合并使用元注解。比如：在Spring MVC中的@RestController就是由@Controller和@ResponseBody组成的。 
 此外，组合注解还可以选择从元注解中重新声明属性以允许自定义。当您只想公开元注解属性的一个子集时，这尤其有用。例如，Spring的@SessionScope注解将作用域名称硬编码为session，但仍允许自定义proxyMode。以下列表显示了sessionScope注解的定义：
@@ -125,16 +126,16 @@ public class AppConfig  {
 </beans>
 ~~~
 
-    <context:component-scan> 隐式的开启了<context:annotation-config>的功能。所以当使用<context:component-scan>的时候就不需要用<context:annotation-config>。
+><context:component-scan> 隐式的开启了<context:annotation-config>的功能。所以当使用<context:component-scan>的时候就不需要用<context:annotation-config>。
 
-    扫描classpath包需要在classpath中存在相应的目录条目。当您使用Ant构建JAR时，请确保您没有激活JAR任务的仅限文件的开关。此外，在某些环境中，根据安全策略，类路径目录可能不会公开-例如，JDK 1.7.0_45及更高版本上的独立应用程序（这需要在清单中设置“可信库”）请参见https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
+>扫描classpath包需要在classpath中存在相应的目录条目。当您使用Ant构建JAR时，请确保您没有激活JAR任务的仅限文件的开关。此外，在某些环境中，根据安全策略，类路径目录可能不会公开-例如，JDK 1.7.0_45及更高版本上的独立应用程序（这需要在清单中设置“可信库”）请参见https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
 
-    在JDK9的模块路径（Jigsaw）上，Spring的类路径扫描通常按预期工作。但是，请确保组件类暴露在module-info描述符中。如果希望Spring调用类的非公共成员，请确保它们是“打开的”（即，它们使用opens声明而不是module-info描述符中的exports声明）。   
+>在JDK9的模块路径（Jigsaw）上，Spring的类路径扫描通常按预期工作。但是，请确保组件类暴露在module-info描述符中。如果希望Spring调用类的非公共成员，请确保它们是“打开的”（即，它们使用opens声明而不是module-info描述符中的exports声明）。   
 
 此外，在使用component-scan元素时，AutowiredAnnotationBeanPostProcessor和CommonAnnotationBeanPostProcessor都是隐式被使用的。这意味着这两个组件都是自动检测并连接在一起的-都没有XML中提供任何bean配置元数据。
 
 
-        通过将annotation-config属性的值设置为false，可以禁用AutoWiredAnnotationBeanPostProcessor和CommonAnnotationBeanPostProcessor的注册。
+>通过将annotation-config属性的值设置为false，可以禁用AutoWiredAnnotationBeanPostProcessor和CommonAnnotationBeanPostProcessor的注册。
 
     
 ## 1.10.4. 使用Filters来定制化扫描
