--- a/Core/1.9Annotation-based-Container-Configuration.md
+++ b/Core/1.9Annotation-based-Container-Configuration.md
@@ -1,17 +1,17 @@
 # 1.9 基于注解的容器配置
 
-    注解是不是比XML配置更好？
+>注解是不是比XML配置更好？
+
+>引入基于注释的配置提出了这样一个问题：这种方法是否比XML“更好”。简短的答案是“它取决于”。长的答案是：每种方法都有其优缺点，通常情况下，由开发人员决定哪种策略更适合它们。由于它们的定义方式，注释在其声明中提供了大量上下文，从而导致配置更简短。然而，XML擅长在不接触源代码或重新编译组件的情况下注入组件。一些开发人员更喜欢将注入靠近源代码，而其他人则认为带注释的类不再是POJO，而且配置变得分散且难以控制。
     
-    引入基于注释的配置提出了这样一个问题：这种方法是否比XML“更好”。简短的答案是“它取决于”。长的答案是：每种方法都有其优缺点，通常情况下，由开发人员决定哪种策略更适合它们。由于它们的定义方式，注释在其声明中提供了大量上下文，从而导致配置更简短。然而，XML擅长在不接触源代码或重新编译组件的情况下注入组件。一些开发人员更喜欢将注入靠近源代码，而其他人则认为带注释的类不再是POJO，而且配置变得分散且难以控制。
-    
-    无论选择哪一种，Spring都能容纳这两种风格，甚至可以将它们混合在一起。值得指出的是，通过它的JavaConfig选项，Spring允许以非侵入性的方式使用注释，而不接触目标组件源代码，并且在工具方面，所有配置样式都由Spring工具套件支持。
+>无论选择哪一种，Spring都能容纳这两种风格，甚至可以将它们混合在一起。值得指出的是，通过它的JavaConfig选项，Spring允许以非侵入性的方式使用注释，而不接触目标组件源代码，并且在工具方面，所有配置样式都由Spring工具套件支持。
     
 
 基于注解的配置提供了XML设置的替代方案，它依赖字节码元数据来注入组件，而不是使用尖括号声明。开发人员不使用XML来描述bean连接，而是使用相关类、方法或字段声明上的注解将配置移动到组件类本身。如示例中所述：RequiredAnnotationBeanPostProcessor与注解结合使用BeanPostProcessor是扩展SpringIOC容器的常用方法。
 
 例如，Spring2.0引入了@Required注解，标记属性必须存在。Spring2.5使得遵循相同的方法来驱动Spring的依赖注入成为可能。本质上，@Autowired注解提供了与Autowiring Collaborators中描述的相同的功能，但是具有更细粒度的控制和更广泛的适用性。Spring2.5还增加了对JSR-250注释的支持，如@PostConstruct和@PreDstroy。Spring 3为javax.inject包中包含的JSR-330（Java依赖注入）注解添加了支持，例如@Inject和@Named。有关这些注解的详细信息，请参阅相关部分。
 
-    注解注入在XML注入之前执行。因此，当两个同时使用时，XML配置会覆盖注解注入的属性。
+>注解注入在XML注入之前执行。因此，当两个同时使用时，XML配置会覆盖注解注入的属性。
     
 同样的，您可以将它们注册为单个bean定义，但也可以通过在基于XML的Spring配置中包含以下标记来隐式注册它们（注意上下文命名空间的包含）：
 
@@ -56,12 +56,12 @@ public class SimpleMovieLister {
 
 此注释指示受影响的bean属性必须在配置时通过bean定义中的显式属性值或通过自动装载填充。如果未填充受影响的bean属性，则容器将引发异常。这就允许了早期和显式的失败，避免了后面的NullPointerException实例等。我们仍然建议您将断言放入bean类本身（例如，放到init方法中）。这样做会强制那些必需的引用和值，即使在容器外部使用类也是如此。
 
-    从Spring Framework 5.1开始，@Required注解正式被弃用，取而代之的是将构造函数注入用于所需的设置（或使用InitializingBean.afterPropertiesSet（）的自定义实现以及bean属性setter方法）。
+>从Spring Framework 5.1开始，@Required注解正式被弃用，取而代之的是将构造函数注入用于所需的设置（或使用InitializingBean.afterPropertiesSet（）的自定义实现以及bean属性setter方法）。
     
     
 ##1.9.2 使用 @Autowired
 
-    在本节包含的示例中，JSR 330的@Inject注解可以代替spring的@Autowired注释。有关详细信息，请参阅此处。
+>在本节包含的示例中，JSR 330的@Inject注解可以代替spring的@Autowired注释。有关详细信息，请参阅此处。
     
 你可以将@Autowired注解到构造器中，如下所示：
 
@@ -80,7 +80,7 @@ public class MovieRecommender {
 }
 ```
     
-    从SpringFramework4.3开始，如果目标bean只定义了一个构造函数，那么就不再需要在此类构造函数上使用@Autowired注释。但是，如果有多个构造函数可用，则必须至少对其中一个进行注释，以告诉容器使用哪一个。
+>从SpringFramework4.3开始，如果目标bean只定义了一个构造函数，那么就不再需要在此类构造函数上使用@Autowired注释。但是，如果有多个构造函数可用，则必须至少对其中一个进行注释，以告诉容器使用哪一个。
     
 @Autowired也可以注解到传统的setter方法，如下例子所示：
 
@@ -142,9 +142,9 @@ public class MovieRecommender {
 ```
 
 
-    确保目标组件（例如movieCatalog或customerPreferenceDAO）始终通过类型来声明，这样才能用在@Autowired注入点。否则，由于在运行时找不到类型匹配，注入可能会失败。
+>确保目标组件（例如movieCatalog或customerPreferenceDAO）始终通过类型来声明，这样才能用在@Autowired注入点。否则，由于在运行时找不到类型匹配，注入可能会失败。
     
-    对于通过类路径扫描找到的XML定义的bean或组件类，容器通常预先知道具体的类型。但是，对于@Bean工厂方法，您需要确保声明的返回类型具有足够的表现力。对于实现多个接口的组件或可能由其实现类型引用的组件，考虑在工厂方法上声明最特定的返回类型（至少与引用bean的注入点所要求的特定类型相同）。
+>对于通过类路径扫描找到的XML定义的bean或组件类，容器通常预先知道具体的类型。但是，对于@Bean工厂方法，您需要确保声明的返回类型具有足够的表现力。对于实现多个接口的组件或可能由其实现类型引用的组件，考虑在工厂方法上声明最特定的返回类型（至少与引用bean的注入点所要求的特定类型相同）。
     
 还可以通过将注解添加到需要该类型数组的字段或方法，那么可以从ApplicationContext中获取到该特定类型的所有bean，如下例所示：
 
@@ -176,12 +176,13 @@ public class MovieRecommender {
 }
 ```
 
-    您的目标bean可以实现org.springframework.core.Ordered接口，或者如果您希望数组或列表中的项按特定顺序排序，可以使用@Order或标准的@Priority注解。
+>您的目标bean可以实现org.springframework.core.Ordered接口，或者如果您希望数组或列表中的项按特定顺序排序，可以使用@Order或标准的@Priority注解。
 
-    否则，它们的顺序遵循容器中相应目标bean定义的注册顺序。
-    您可以在目标类级别和@Bean方法上声明@Order注解，可能是通过单个bean定义（在使用同一bean类的多个定义的情况下）声明的。@Order可能会影响注入点的优先级，但请注意，它们不会影响单例启动顺序，这是一个由依赖关系和@DependsOn声明确定的正交问题。
+>否则，它们的顺序遵循容器中相应目标bean定义的注册顺序。
 
-    注意，标准javax.annotation.Priority注解在@Bean级别不可用，因为它不能在方法上声明。它的语义可以通过@Order values和@Primary在每种类型的单个bean上进行建模。
+>您可以在目标类级别和@Bean方法上声明@Order注解，可能是通过单个bean定义（在使用同一bean类的多个定义的情况下）声明的。@Order可能会影响注入点的优先级，但请注意，它们不会影响单例启动顺序，这是一个由依赖关系和@DependsOn声明确定的正交问题。
+
+>注意，标准javax.annotation.Priority注解在@Bean级别不可用，因为它不能在方法上声明。它的语义可以通过@Order values和@Primary在每种类型的单个bean上进行建模。
     
 Map实例也可以被注入，只要key是String类型。Map value包括了所有的类型匹配的Bean，keys是该bean的名字。入下图所示：
 
@@ -223,9 +224,9 @@ public class SimpleMovieLister {
 
 注入的构造函数和工厂方法参数是一种特殊情况，因为@Autowired上的“required”标志的含义有所不同，因为Spring的构造函数解析算法可能处理多个构造函数。默认情况下，构造函数和工厂方法参数实际上是必需的，但在单个构造函数场景中有一些特殊规则，例如，如果没有匹配的bean可用，多元素注入点（数组、集合、映射）解析为空实例。这允许使用一个通用的实现模式，其中所有依赖项都可以在唯一的多参数构造函数中声明，例如声明为没有@Autowired注释的单个公共构造函数。
 
-    每个类只能标记一个带required注解的构造函数，但可以标记多个非必需的构造函数。在这种情况下，每一个都是候选对象，Spring将使用最贪婪的可以满足最多依赖关系的构造函数，也就是说，拥有最多参数的构造函数。构造函数解析算法与使用重载构造函数的未注解类相同，只是将候选对象缩小到带注解的构造函数。
+>每个类只能标记一个带required注解的构造函数，但可以标记多个非必需的构造函数。在这种情况下，每一个都是候选对象，Spring将使用最贪婪的可以满足最多依赖关系的构造函数，也就是说，拥有最多参数的构造函数。构造函数解析算法与使用重载构造函数的未注解类相同，只是将候选对象缩小到带注解的构造函数。
     
-    建议使用@Autowired的'required'属性而不是使用setter方法上的@Required注释。“required”属性表示自动装载不需要该属性。如果无法自动装载，则忽略该属性。另一方面，@Required更强大，因为它强制通过容器支持的任何方式来设置属性。如果未定义任何值，则会引发相应的异常。
+>建议使用@Autowired的'required'属性而不是使用setter方法上的@Required注释。“required”属性表示自动装载不需要该属性。如果无法自动装载，则忽略该属性。另一方面，@Required更强大，因为它强制通过容器支持的任何方式来设置属性。如果未定义任何值，则会引发相应的异常。
     
 或者，您可以通过Java 8的java.util.Optional表示特定依赖项的非必需性质，如下示例显示：
 
@@ -404,15 +405,15 @@ public class MovieRecommender {
 
 限定符也适用于类型化集合，如前面讨论的-例如，设置<MovieCatalog>。在这种情况下，根据声明的限定符，所有匹配的bean都作为集合注入。这意味着限定符不必是唯一的。相反，它们构成了过滤标准。例如，可以定义多个具有相同限定符值“action”的MovieCatalog bean，所有这些限定符值都被注入到一个用@qualifier（“action”）注释的集合中。
 
-    让限定符值根据目标bean名称在类型匹配候选中进行选择，不需要在注入点处使用@Qualifier注解。如果没有其他分辨标记（例如限定符或主标记），对于非唯一依赖关系情况，Spring将针对目标bean名称匹配注入点名称（即字段名称或参数名称），来选择相同的命名候选对象（如果有）。
+>让限定符值根据目标bean名称在类型匹配候选中进行选择，不需要在注入点处使用@Qualifier注解。如果没有其他分辨标记（例如限定符或主标记），对于非唯一依赖关系情况，Spring将针对目标bean名称匹配注入点名称（即字段名称或参数名称），来选择相同的命名候选对象（如果有）。
     
-    也就是说，如果您打算用名称表示注解驱动的注入，那么不要主要使用@Autowired，即使它能够在类型匹配的候选对象中通过bean名称进行选择。相反，使用JSR-250 @Resource注解，该注解在语义上定义为通过其唯一名称标识特定的目标组件，声明的类型与匹配过程无关。@Autowired有相当不同的语义：在按类型选择候选bean之后，指定的字符串限定符值只在那些类型选择的候选对象中考虑（例如，将account限定符与标记有相同限定符标签的bean匹配）。
+>也就是说，如果您打算用名称表示注解驱动的注入，那么不要主要使用@Autowired，即使它能够在类型匹配的候选对象中通过bean名称进行选择。相反，使用JSR-250 @Resource注解，该注解在语义上定义为通过其唯一名称标识特定的目标组件，声明的类型与匹配过程无关。@Autowired有相当不同的语义：在按类型选择候选bean之后，指定的字符串限定符值只在那些类型选择的候选对象中考虑（例如，将account限定符与标记有相同限定符标签的bean匹配）。
     
-    对于本身定义为集合、映射或数组类型的bean，@Resource是一个很好的解决方案，它通过唯一的名称引用特定的集合或数组bean。也就是说，从4.3版的collection开始，只要元素类型信息保存在@Bean返回类型签名或集合继承层次结构中，就可以通过spring的@Autowired类型匹配算法来匹配map和数组类型。在这种情况下，可以使用限定符值在相同类型的集合中进行选择，如前一段所述。
+>对于本身定义为集合、映射或数组类型的bean，@Resource是一个很好的解决方案，它通过唯一的名称引用特定的集合或数组bean。也就是说，从4.3版的collection开始，只要元素类型信息保存在@Bean返回类型签名或集合继承层次结构中，就可以通过spring的@Autowired类型匹配算法来匹配map和数组类型。在这种情况下，可以使用限定符值在相同类型的集合中进行选择，如前一段所述。
     
-    从4.3开始，@Autowired还考虑了注入的自引用（即，返回当前注入的bean的引用）。请注意，自注入是一种回退。对其他组件的常规依赖始终具有优先权。从这个意义上说，自我推荐人不参与定期的候选人选择，相反，它们总是以最低优先级结束。在实践中，您应该只使用自引用作为最后的手段（例如，通过bean的事务代理在同一实例上调用其他方法）。在这种情况下，考虑将受影响的方法分解为单独的委托bean。或者，您可以使用@Resource，它可以通过其唯一的名称将代理返回到当前bean。
+>从4.3开始，@Autowired还考虑了注入的自引用（即，返回当前注入的bean的引用）。请注意，自注入是一种回退。对其他组件的常规依赖始终具有优先权。从这个意义上说，自我推荐人不参与定期的候选人选择，相反，它们总是以最低优先级结束。在实践中，您应该只使用自引用作为最后的手段（例如，通过bean的事务代理在同一实例上调用其他方法）。在这种情况下，考虑将受影响的方法分解为单独的委托bean。或者，您可以使用@Resource，它可以通过其唯一的名称将代理返回到当前bean。
     
-    @Autowired应用于字段、构造函数和多参数方法，允许在参数级别缩小限定符注释的范围。相反，只有具有单个参数的字段和bean属性setter方法才支持@Resource。因此，如果注入目标是一个构造函数或多参数方法，那么应该坚持使用限定符。
+>@Autowired应用于字段、构造函数和多参数方法，允许在参数级别缩小限定符注释的范围。相反，只有具有单个参数的字段和bean属性setter方法才支持@Resource。因此，如果注入目标是一个构造函数或多参数方法，那么应该坚持使用限定符。
     
 您可以创建自己的自定义限定符注解。为此，请定义一个注解并在定义中提供@Qualifier注释，如下示例所示：
 
@@ -710,7 +711,7 @@ public class SimpleMovieLister {
 }
 ```
 
-    注解提供的名称由CommonAnnotationBeanPostProcessor知道的ApplicationContext解析为bean名称。如果显式配置Spring的SimpleJndiBeanFactory，则可以通过JNDI解析名称。但是，我们建议您依赖默认行为，并使用Spring的JNDI查找功能来保持间接寻址的级别。
+>注解提供的名称由CommonAnnotationBeanPostProcessor知道的ApplicationContext解析为bean名称。如果显式配置Spring的SimpleJndiBeanFactory，则可以通过JNDI解析名称。但是，我们建议您依赖默认行为，并使用Spring的JNDI查找功能来保持间接寻址的级别。
     
 在@Resource用法中，如果没有指定显式名称，并且类似于@Autowired，@Resource会找到一个主类型匹配，而不是指定的bean，并解析已知的可解析依赖项：BeanFactory、ApplicationContext、ResourceLoader、ApplicationEventPublisher，和MessageSource接口。
 
@@ -755,7 +756,7 @@ public class CachingMovieLister {
 
 有关组合各种生命周期机制的效果的详细信息，请参见组合生命周期机制。
 
-    与@Resource一样，@PostConstruct和@PreDestroy注解类型是JDK 6到8标准Java库的一部分。然而，整个javax.annotation包与JDK 9中的核心Java模块分离，并最终在JDK 11中被删除。如果需要，javax.annotation-api工件现在需要通过maven central获得，只需像其他库一样添加到应用程序的类路径中即可。
+>与@Resource一样，@PostConstruct和@PreDestroy注解类型是JDK 6到8标准Java库的一部分。然而，整个javax.annotation包与JDK 9中的核心Java模块分离，并最终在JDK 11中被删除。如果需要，javax.annotation-api工件现在需要通过maven central获得，只需像其他库一样添加到应用程序的类路径中即可。
         
     
 
