--- a/Core/1.10Classpath-Scanning-and-Managed-Components.md
+++ b/Core/1.10Classpath-Scanning-and-Managed-Components.md
@@ -2,9 +2,9 @@
 
 本章中的大多数示例使用XML来指定在Spring容器中生成每个BeanDefinition的配置元数据。上一节（基于注解的容器配置）演示了如何通过源代码级注解提供大量的配置元数据。然而，即使在这些示例中，XML文件中也显式定义了“基本”bean定义，而注解只驱动依赖注入。
 
-本节介绍通过扫描类路径隐式检测候选组件的选项。候选组件是与筛选条件相匹配的类，并在容器中注册了相应的bean定义。这样就不需要使用XML来执行bean注册。相反，您可以使用注释（例如@Component）、AspectJ类型表达式或您自己的自定义筛选条件来选择哪些类具有向容器注册的bean定义。
+本节介绍通过扫描类路径隐式检测候选组件的选项。候选组件是与筛选条件相匹配的类，并在容器中注册了相应的bean定义。这样就不需要使用XML来执行bean注册。相反，您可以使用注解（例如@Component）、AspectJ类型表达式或您自己的自定义筛选条件来选择哪些类具有向容器注册的bean定义。
 
->从Spring3.0开始，Spring JavaConfig项目提供的许多特性都是核心Spring框架的一部分。这允许您使用Java定义bean，而不是使用传统的XML文件。查看@Configuration、@Bean、@Import和@DependsOn注释，了解如何使用这些新功能的示例。
+>从Spring3.0开始，Spring JavaConfig项目提供的许多特性都是核心Spring框架的一部分。这允许您使用Java定义bean，而不是使用传统的XML文件。查看@Configuration、@Bean、@Import和@DependsOn注解，了解如何使用这些新功能的示例。
 
 ## 1.10.1 @Component和进一步的构造型注解
 
@@ -24,7 +24,7 @@ Spring提供了更多的原型注解：@Component、@Service和@Controller。@Co
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
 @Component 
-public @interface Service {
+public @Interface Service {
 
     // ....
 }
@@ -40,7 +40,7 @@ public @interface Service {
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
 @Scope(WebApplicationContext.SCOPE_SESSION)
-public @interface SessionScope {
+public @Interface SessionScope {
 
     /**
      * Alias for {@link Scope#proxyMode}.
@@ -107,7 +107,7 @@ public class AppConfig  {
 }
 ~~~
 
-为了简洁起见，前面的示例可能使用了注释的value属性（即@ComponentScan（“org.example”））。
+为了简洁起见，前面的示例可能使用了注解的value属性（即@ComponentScan（“org.example”））。
 
 下面是使用XML的例子：
 
@@ -140,7 +140,7 @@ public class AppConfig  {
     
 ## 1.10.4. 使用Filters来定制化扫描
 
-默认情况下，用@Component、@Repository、@Service、@Controller注解的类或用@Component注解的自定义注解是唯一检测到的候选组件。但是，可以通过应用自定义筛选器来修改和扩展此行为。将它们作为@component scan注释的includefilters或excludefilters参数添加（或作为component scan元素的include filter或exclude filter子元素添加）。每个筛选器元素都需要类型和表达式属性。下表介绍了筛选选项：
+默认情况下，用@Component、@Repository、@Service、@Controller注解的类或用@Component注解的自定义注解是唯一检测到的候选组件。但是，可以通过应用自定义筛选器来修改和扩展此行为。将它们作为@Component scan注解的includefilters或excludefilters参数添加（或作为component scan元素的include filter或exclude filter子元素添加）。每个筛选器元素都需要类型和表达式属性。下表介绍了筛选选项：
 
 |Filter type | 表达式例子 |  描述 |
 |-|-|-|
@@ -180,7 +180,7 @@ public class AppConfig {
 
 ## 1.10.5 在组件内部定义Bean元数据
 
-Spring组件还可以为容器提供bean定义元数据。您可以使用用于在@Configuration annotated类中定义bean元数据的相同@bean注释来实现这一点。以下示例显示了如何执行此操作：
+Spring组件还可以为容器提供bean定义元数据。您可以使用用于在@Configuration annotated类中定义bean元数据的相同@Bean注解来实现这一点。以下示例显示了如何执行此操作：
 
 ~~~
 @Component
@@ -198,11 +198,11 @@ public class FactoryMethodComponent {
 }
 ~~~
 
-前面的类是一个Spring组件，它的doWork（）方法中包含特定于应用程序的代码。但是，它还提供一个bean定义，该bean定义具有引用方法publicInstance（）的工厂方法。@bean注释标识工厂方法和其他bean定义属性，例如通过@qualifier注释的限定符值。可以指定的其他方法级批注包括@Scope、@Lazy和自定义限定符批注。
+前面的类是一个Spring组件，它的doWork（）方法中包含特定于应用程序的代码。但是，它还提供一个bean定义，该bean定义具有引用方法publicInstance（）的工厂方法。@Bean注解标识工厂方法和其他bean定义属性，例如通过@qualifier注解的限定符值。可以指定的其他方法级批注包括@Scope、@Lazy和自定义限定符批注。
 
 除了其用于组件初始化的角色之外，您还可以将@Lazy注解放在标有@Autowired或@Inject的注入点上。在这种情况下，它会导致注入延迟解析代理。
 
-如前所述，支持自动装载的字段和方法，并额外支持@bean方法的自动装载。以下示例显示了如何执行此操作：
+如前所述，支持自动装载的字段和方法，并额外支持@Bean方法的自动装载。以下示例显示了如何执行此操作：
 
 ~~~
 @Component
@@ -263,9 +263,9 @@ public class FactoryMethodComponent {
 
 >您可以将@Bean方法声明为静态方法，允许在不将其包含的配置类创建为实例的情况下调用它们。在定义post-processor bean（例如，BeanFactoryPostProcessor或BeanPostProcessor类型）时，这是特别有意义的，因为这样的bean在容器生命周期的早期就被初始化，应该避免在此时触发配置的其他部分。
 
->由于技术限制，对static@Bean方法的调用永远不会被容器截获，即使是在@Configuration类（如本节前面所述）中也是如此：cglib子类只能重写非静态方法。因此，直接调用另一个@bean方法具有标准Java语义，导致从工厂方法本身直接返回一个独立的实例。
+>由于技术限制，对static@Bean方法的调用永远不会被容器截获，即使是在@Configuration类（如本节前面所述）中也是如此：cglib子类只能重写非静态方法。因此，直接调用另一个@Bean方法具有标准Java语义，导致从工厂方法本身直接返回一个独立的实例。
 
->“@Bean”方法的Java语言可见性不会对Spring容器中的bean定义产生直接影响。您可以自由地声明您认为适合非@Configuration类以及任何静态方法的工厂方法。但是，@Configuration类中的常规@bean方法必须是可重写的，也就是说，它们不能声明为私有或最终的。
+>“@Bean”方法的Java语言可见性不会对Spring容器中的bean定义产生直接影响。您可以自由地声明您认为适合非@Configuration类以及任何静态方法的工厂方法。但是，@Configuration类中的常规@Bean方法必须是可重写的，也就是说，它们不能声明为私有或最终的。
 
 >“@Bean”方法也在给定组件或配置类的基类上发现，以及在由组件或配置类实现的接口中声明的Java 8默认方法上。这允许在组成复杂的配置安排方面有很大的灵活性，即使是多个继承也可以通过Java 8默认方法（如Spring 4.2）来实现。
 
