--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -34,7 +34,7 @@ public class SimpleMovieLister {
 }
 ```
 
-注意这个类没有什么特别的。它是一个POJO，不依赖于特定于容器的接口、基类或注释。
+注意这个类没有什么特别的。它是一个POJO，不依赖于特定于容器的接口、基类或注解。
 
 **构造函数参数的解析**
 
@@ -133,7 +133,7 @@ public class ExampleBean {
 
 请记住，要使用这项功能，必须在启用调试标志的情况下编译代码，以便Spring可以从构造函数中查找参数名。
 
-如果无法或不希望使用调试标志编译代码，可以使用@ConstructorProperties JDK注释显式命名构造函数参数。然后示例类必须如下所示：
+如果无法或不希望使用调试标志编译代码，可以使用@ConstructorProperties JDK注解显式命名构造函数参数。然后示例类必须如下所示：
 
 
 ```
@@ -155,7 +155,7 @@ public class ExampleBean {
 
 基于Setter的DI是由容器在调用无参数构造函数或无参数静态工厂方法实例化bean之后调用bean上的setter方法来完成的。
 
-下面的示例显示了一个类，该类只能通过使用纯setter注入来注入依赖项。这个类是传统的Java。它是一个POJO，不依赖于特定于容器的接口、基类或注释。
+下面的示例显示了一个类，该类只能通过使用纯setter注入来注入依赖项。这个类是传统的Java。它是一个POJO，不依赖于特定于容器的接口、基类或注解。
 
 
 ```
@@ -972,7 +972,7 @@ public class CommandManager implements ApplicationContextAware {
 * 为了使这个动态子类工作，SpringBean容器子类不能是final类，要重写的方法也不能是final类。
 * 单元测试具有抽象方法的类需要您自己对类进行子类化，并提供抽象方法的stub实现。
 * 组件扫描还需要具体的方法，这会提供给具体的类来使用。
-* 另一个关键限制是查找方法不适用于工厂方法，尤其不适用于配置类中的@bean方法，因为在这种情况下，容器不负责创建实例，因此无法动态创建运行时生成的子类。
+* 另一个关键限制是查找方法不适用于工厂方法，尤其不适用于配置类中的@Bean方法，因为在这种情况下，容器不负责创建实例，因此无法动态创建运行时生成的子类。
 
 ```
 
@@ -1058,7 +1058,7 @@ public abstract class CommandManager {
 ```
 
 
-注意，通常应该用具体的存根实现声明这种带注释的查找方法，以便它们与Spring的组件扫描规则兼容，默认情况下抽象类会被忽略。此限制不适用于显式注册或显式导入的bean类。
+注意，通常应该用具体的存根实现声明这种带注解的查找方法，以便它们与Spring的组件扫描规则兼容，默认情况下抽象类会被忽略。此限制不适用于显式注册或显式导入的bean类。
 
 ```
 访问不同作用域目标bean的另一种方法是ObjectFactory/Provider注入点。
