--- a/Core/1.8Container-Extension-Points.md
+++ b/Core/1.8Container-Extension-Points.md
@@ -44,7 +44,7 @@ BeanPostProcessor实例和AOP自动代理
 
 对于任何这样的bean，您都应该看到一条日志消息：bean somebean不适合被所有的BeanPostProcessor接口处理（例如：不适合自动代理）。
 
-如果您使用autowiring或@Resource将bean连接到BeanPostProcessor，那么在搜索类型匹配的依赖项候选项时，Spring可能会访问意外的bean，因此，它们不适合自动代理或选用其他类型的post-processing方式。例如，如果您有一个用@Resource注释的依赖项，其中字段或setter名称与bean的声明名称不直接匹配，并且没有使用name属性，那么spring将通过类型来访问其他bean。
+如果您使用autowiring或@Resource将bean连接到BeanPostProcessor，那么在搜索类型匹配的依赖项候选项时，Spring可能会访问意外的bean，因此，它们不适合自动代理或选用其他类型的post-processing方式。例如，如果您有一个用@Resource注解的依赖项，其中字段或setter名称与bean的声明名称不直接匹配，并且没有使用name属性，那么spring将通过类型来访问其他bean。
 
 ```
 
@@ -136,7 +136,7 @@ org.springframework.scripting.groovy.GroovyMessenger@272961
 
 **例子：RequiredAnnotationBeanPostProcessor**
 
-将回调接口或注解与自定义BeanPostProcessor实现结合使用是扩展Spring IOC容器的常用方法。一个例子是Spring的RequiredAnnotationBeanPostProcessor-一个随Spring发行版一起提供的BeanPostProcessor实现，它要求用（任意）注释标记的bean上的JavaBean属性都需要一个真实值。
+将回调接口或注解与自定义BeanPostProcessor实现结合使用是扩展Spring IOC容器的常用方法。一个例子是Spring的RequiredAnnotationBeanPostProcessor-一个随Spring发行版一起提供的BeanPostProcessor实现，它要求用（任意）注解标记的bean上的JavaBean属性都需要一个真实值。
 
 ## 1.8.2 使用BeanFactoryPostProcessor自定义配置元数据
 
