--- a/Core/1.13Environment-Abstraction.md
+++ b/Core/1.13Environment-Abstraction.md
@@ -36,7 +36,7 @@ public DataSource dataSource() throws Exception {
 }
 ~~~
 
-问题是如何根据当前环境在使用这两种变体之间进行切换。随着时间的推移，Spring用户设计了许多实现这一点的方法，通常依赖于系统环境变量和包含$placeholder标记的XML<import/>语句的组合，这些标记根据环境变量的值解析为正确的配置文件路径。bean定义概要文件是一个核心容器特性，它为这个问题提供了解决方案。
+问题是如何根据当前环境在使用这两种变体之间进行切换。随着时间的推移，Spring用户设计了许多实现这一点的方法，通常依赖于系统环境变量和包含$placeholder标记的XML\<import/>语句的组合，这些标记根据环境变量的值解析为正确的配置文件路径。bean定义概要文件是一个核心容器特性，它为这个问题提供了解决方案。
 
 如果我们概括前面环境特定bean定义示例中所示的用例，那么最终需要在特定上下文中注册特定bean定义，而不是在其他上下文中注册特定bean定义。可以说，您希望在情况A中注册bean定义的某个概要文件，在情况B中注册另一个概要文件。我们首先更新配置以反映这种需求。
 
