--- a/Core/1.6Customizing-the-Nature-of-a-Bean.md
+++ b/Core/1.6Customizing-the-Nature-of-a-Bean.md
@@ -74,7 +74,7 @@ public class AnotherExampleBean implements InitializingBean {
 void destroy() throws Exception;
 ```
 
-我们不建议你使用DisposableBean，因为他和Spring框架耦合，我们推荐你使用@PreDestroy注解，或者一个能被bean定义支持的通用方法。在XML配置中，可以使用<bean/>的destroy-method属性。在Java配置中，可以设置@Bean的destroyMethod属性。如下所示：
+我们不建议你使用DisposableBean，因为他和Spring框架耦合，我们推荐你使用@PreDestroy注解，或者一个能被bean定义支持的通用方法。在XML配置中，可以使用\<bean/>的destroy-method属性。在Java配置中，可以设置@Bean的destroyMethod属性。如下所示：
 
 
 ```
@@ -152,11 +152,11 @@ public class DefaultBlogService implements BlogService {
 
 </beans>
 ```
-<beans>中的default-init-method表明所有的bean在Spring IOC容器进行初始化的时候，都会在合适的时间调用 init方法。
+\<beans>中的default-init-method表明所有的bean在Spring IOC容器进行初始化的时候，都会在合适的时间调用 init方法。
 
-同样的，你可以在<beans>中配置default-destroy-method 。
+同样的，你可以<beans>中配置default-destroy-method 。
 
-如果想覆盖默认的回调函数，可以在<bean>中使用init-method或者destroy-method。
+如果想覆盖默认的回调函数，可以在\<bean>中使用init-method或者destroy-method。
 
 Spring容器保证在向bean提供所有依赖项之后立即调用配置的初始化回调。因此，在对原始bean引用调用初始化回调时，AOP拦截器等尚未作用于bean。
 
