--- a/Core/1.3Bean-Overview.md
+++ b/Core/1.3Bean-Overview.md
@@ -48,7 +48,7 @@ DefaultListableBeanFactory通过registerSingleton（..）和registerBeanDefiniti
 
 >Bean命名规范
 
->在命名bean时使用标准Java规范，例如字段名。也就是说，bean名称以一个小写字母开头的驼峰写法。比如：accountmanager、accountservice、userdao、logincontroller等。
+>在命名bean时使用标准Java规范，例如字段名。也就是说，bean名称以一个小写字母开头的驼峰写法。比如：accountManager, accountService, userDao, loginController等。
 
 >bean命名的一致性使您的配置更易于阅读和理解。另外，如果您使用SpringAOP，那么一致性的Bean命名会在通知一组名字相关的Bean时很有用。
 
@@ -89,7 +89,7 @@ JAVA配置
 
 bean定义本质上是创建一个或多个对象的方法。当需要创建Bean的时候，容器会查看命名bean的创建方法，并使用由该bean定义封装的配置元数据来创建（或获取）实际对象。
 
-如果使用基于XML的配置元数据，则需要指定要在<bean/>元素的class属性中实例化的对象的类型（或类名）。这个class属性（在内部是BeanDefinition实例上的Class属性）通常是强制的。（或者请参见使用实例工厂方法和bean定义继承进行实例化。）可以通过以下两种方式之一使用Class属性：
+如果使用基于XML的配置元数据，则需要指定要在< bean/>元素的class属性中实例化的对象的类型（或类名）。这个class属性（在内部是BeanDefinition实例上的Class属性）通常是强制的。（或者请参见使用实例工厂方法和bean定义继承进行实例化。）可以通过以下两种方式之一使用Class属性：
 
 - 多数情况下，在容器本身直接创建bean，通过调用bean的构造函数来创建bean的实例，相当于Java代码的new。
 
