--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -219,7 +219,7 @@ Spring IOC容器不仅管理对象（bean）的实例化，还管理协作者（
 </beans>
 ```
 
-要创建这样的代理，可以将一个子< aop:scoped-proxy/>元素插入到作用域bean定义中（请参见选择要创建的代理类型和基于XML模式的配置）。为什么在请求、会话和自定义范围的bean需要< aop:scoped-proxy/>元素？考虑下面的singleton bean定义，并将其与您需要为上述范围定义的内容进行对比（请注意，下面的userPreferences bean定义并不完整）：
+要创建这样的代理，可以将一个子&lt;aop:scoped-proxy/>元素插入到作用域bean定义中（请参见选择要创建的代理类型和基于XML模式的配置）。为什么在请求、会话和自定义范围的bean需要&lt;aop:scoped-proxy/>元素？考虑下面的singleton bean定义，并将其与您需要为上述范围定义的内容进行对比（请注意，下面的userPreferences bean定义并不完整）：
 
 
 ```
@@ -253,11 +253,11 @@ Spring IOC容器不仅管理对象（bean）的实例化，还管理协作者（
 
 **选择创建的代理类型**
 
-一般来说当Spring使用\<aop:scoped-proxy/>来创建代理时，会使用CGLIB。
+一般来说当Spring使用&lt;aop:scoped-proxy/>来创建代理时，会使用CGLIB。
 
 >CGLIB代理只拦截公共方法调用！不要在此类代理上调用非公共方法。它们不会委托给实际作用域目标对象。
 
-或者，可以通过为\<aop:scoped-proxy/>元素的proxy-target-class属性的值指定false，将spring容器配置为为此类作用域bean创建标准的基于JDK接口的代理。使用基于JDK接口的代理意味着您不需要在应用程序类路径中加入其他库。但是，它意味着作用域bean的类必须实现至少一个接口，并且所有注入作用域bean的合作者必须通过其接口之一引用bean。以下示例显示了基于接口的代理：
+或者，可以通过为&lt;aop:scoped-proxy/>元素的proxy-target-class属性的值指定false，将spring容器配置为为此类作用域bean创建标准的基于JDK接口的代理。使用基于JDK接口的代理意味着您不需要在应用程序类路径中加入其他库。但是，它意味着作用域bean的类必须实现至少一个接口，并且所有注入作用域bean的合作者必须通过其接口之一引用bean。以下示例显示了基于接口的代理：
 
 ```
 <!-- DefaultUserPreferences implements the UserPreferences interface -->
@@ -366,7 +366,7 @@ beanFactory.registerScope("thread", threadScope);
 </beans>
 ```
 
->当你在FactoryBean的实现中使用\<aop:scoped-proxy/>时，是这个factory bean本身被代理，而不是他返回的对象被代理getObject()。
+>当你在FactoryBean的实现中使用&lt;aop:scoped-proxy/>时，是这个factory bean本身被代理，而不是他返回的对象被代理getObject()。
 
 
 
