--- a/Core/1.6Customizing-the-Nature-of-a-Bean.md
+++ b/Core/1.6Customizing-the-Nature-of-a-Bean.md
@@ -108,7 +108,7 @@ public class AnotherExampleBean implements DisposableBean {
 
 在编写不使用Spring特定的InitializingBean和DisposableBean回调接口的初始化和销毁方法回调时，通常会命名为init（）、initialize（）、dispose（）。理想情况下，这样的生命周期回调方法的名称在项目中是标准化的，这样所有开发人员都使用相同的方法名称并确保一致性。
 
-您可以配置Spring容器去“查找”特定名字的初始化和销毁方法。这意味着，作为应用程序开发人员，您可以编写应用程序类并使用名为init（）的初始化回调，而无需为每个bean定义配置init method=“init”属性。Spring IOC容器在创建bean时将会调用该方法。此功能强烈命名的一致性。
+您可以配置Spring容器去“查找”特定名字的初始化和销毁方法。这意味着，作为应用程序开发人员，您可以编写应用程序类并使用名为init（）的初始化回调，而无需为每个bean定义配置init method=“init”属性。Spring IOC容器在创建bean时将会调用该方法。此功能强调命名的一致性。
 
 假设初始化回调方法名为init（），销毁回调方法名为destroy（）。然后，您的类类似于以下示例：
 
@@ -206,13 +206,9 @@ public interface LifecycleProcessor extends Lifecycle {
 
 LifecycleProcessor是Lifecycle的扩展。它还添加了另外两种方法来响应正在刷新和关闭的上下文。
 
+>请注意，org.springframework.context.Lifecycle接口只是提供了一个简单的start和stop通知协议，但是并没有实现上下文刷新时自动启动的功能。如果想更好的控制自动启动的功能，可以实现org.springframework.context.SmartLifecycle接口。
 
-```
-请注意，org.springframework.context.Lifecycle接口只是提供了一个简单的start和stop通知协议，但是并没有实现上下文刷新时自动启动的功能。如果想更好的控制自动启动的功能，可以实现org.springframework.context.SmartLifecycle接口。
-
-另外，stop通知不能保证一定在destruction之前执行。通常情况下所有的Lifecycle都会收到一个stop通知在总的destruction回调执行之前。但是在热刷新或者终止刷新尝试时，只会执行destroy方法。
-
-```
+>另外，stop通知不能保证一定在destruction之前执行。通常情况下所有的Lifecycle都会收到一个stop通知在总的destruction回调执行之前。但是在热刷新或者终止刷新尝试时，只会执行destroy方法。
 
 
 启动和关闭调用的顺序可能很重要。如果任何两个对象之间存在“依赖”关系，则依赖方在依赖之后开始，在依赖之前停止。然而，有时，直接依赖性是未知的。您可能只知道某个类型的对象应该先于另一个类型的对象开始。在这些情况下，SmartLifecycle接口定义了另一个选项，即在其父接口上定义的getPhase（）方法。下表显示了Phased接口的定义：
@@ -328,8 +324,7 @@ public interface BeanNameAware {
 |BootstrapContextAware|容器运行的BootstrapContext资源适配器，通常只用在 JCA-aware 的ApplicationContext实例中|
 |LoadTimeWeaverAware|在加载时为处理类定义而定义的weaver。|
 |MessageSourceAware|处理消息所配置的策略（支持参数化和国际化）|
-|NotificationPublisherAware|	
-Spring JMX 通知publisher|
+|NotificationPublisherAware|Spring JMX 通知publisher|
 |ResourceLoaderAware|为资源的low-level访问配置加载器|
 |ServletConfigAware|当前容器运行的ServletConfig，只在web-aware 的Spring ApplicationContext有效|
 |ServletContextAware|当前容器运行的ServletContext，只在web-aware 的Spring ApplicationContext有效|
