--- a/Core/1.10Classpath-Scanning-and-Managed-Components.md
+++ b/Core/1.10Classpath-Scanning-and-Managed-Components.md
@@ -126,7 +126,7 @@ public class AppConfig  {
 </beans>
 ~~~
 
->\<context:component-scan> 隐式的开启了\<context:annotation-config>的功能。所以当使用\<context:component-scan>的时候就不需要用\<context:annotation-config>。
+>&lt;context:component-scan> 隐式的开启了&lt;context:annotation-config>的功能。所以当使用&lt;context:component-scan>的时候就不需要用&lt;context:annotation-config>。
 
 >扫描classpath包需要在classpath中存在相应的目录条目。当您使用Ant构建JAR时，请确保您没有激活JAR任务的仅限文件的开关。此外，在某些环境中，根据安全策略，类路径目录可能不会公开-例如，JDK 1.7.0_45及更高版本上的独立应用程序（这需要在清单中设置“可信库”）请参见https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）。
 
@@ -240,7 +240,7 @@ public class FactoryMethodComponent {
 }
 ~~~
 
-该示例自动将字符串方法参数country注入到另一个名为privateInstance的bean上的age属性的值。Spring表达式语言元素通过符号#{ \<expression> }定义属性的值。对于@Value注解，表达式解析器被预先配置为在解析表达式文本时查找bean名称。
+该示例自动将字符串方法参数country注入到另一个名为privateInstance的bean上的age属性的值。Spring表达式语言元素通过符号#{ &lt;expression> }定义属性的值。对于@Value注解，表达式解析器被预先配置为在解析表达式文本时查找bean名称。
 
 从SpringFramework4.3开始，还可以声明InjectionPoint类型的工厂方法参数（或其更具体的子类：DependencyDescriptor）以访问触发当前bean创建的请求注入点。
 
@@ -393,7 +393,7 @@ public class CachingMovieCatalog implements MovieCatalog {
 
 虽然类路径扫描速度非常快，但是可以通过在编译时创建一个静态候选列表来提高大型应用程序的启动性能。在此模式下，作为组件扫描目标的所有模块都必须使用此机制。
 
->您现有的@ComponentScan或\<context:component-scan>指令必须保持原样，以请求上下文扫描某些包中的候选项。当ApplicationContext检测到这样的索引时，它会自动使用它，而不是扫描类路径。
+>您现有的@ComponentScan或&lt;context:component-scan>指令必须保持原样，以请求上下文扫描某些包中的候选项。当ApplicationContext检测到这样的索引时，它会自动使用它，而不是扫描类路径。
 
 要生成索引，请向每个模块添加一个附加依赖项，该模块包含作为组件扫描指令目标的组件。下面的示例说明如何使用Maven：
 
