--- a/Core/1.10Classpath-Scanning-and-Managed-Components.md
+++ b/Core/1.10Classpath-Scanning-and-Managed-Components.md
@@ -142,14 +142,13 @@ public class AppConfig  {
 
 默认情况下，用@Component、@Repository、@Service、@Controller注解的类或用@Component注解的自定义注解是唯一检测到的候选组件。但是，可以通过应用自定义筛选器来修改和扩展此行为。将它们作为@Component scan注解的includefilters或excludefilters参数添加（或作为component scan元素的include filter或exclude filter子元素添加）。每个筛选器元素都需要类型和表达式属性。下表介绍了筛选选项：
 
-|Filter type | 表达式例子 |  描述 |
-|-|-|-|
-|annotation（默认） | org.example.SomeAnnotation | type基本的目标组件 |
-|assignable | 	
-org.example.SomeClass | 目标组件可分配给（扩展或实现）的类（或接口）。 |
-|aspectj | org.example..*Service+ | 匹配目标组件的AspectJ类型 |
-|regex | org\\.example\\.Default.*|匹配目标主键内名的正则表达式|
-|custom|org.example.MyTypeFilter|org.springframework.core.type .TypeFilter的自定义实现|
+Filter type | 表达式例子 |  描述 
+-|-|-
+annotation（默认） | org.example.SomeAnnotation | type基本的目标组件 
+assignable | org.example.SomeClass | 目标组件可分配给（扩展或实现）的类（或接口）。 
+aspectj | org.example..*Service+ | 匹配目标组件的AspectJ类型 
+regex | org\\.example\\.Default.*|匹配目标主键内名的正则表达式
+custom|org.example.MyTypeFilter|org.springframework.core.type .TypeFilter的自定义实现
 
 下面例子展示了忽略 @Repository 并且使用“stub” repositories 的注解：
 
