--- a/Core/1.10Classpath-Scanning-and-Managed-Components.md
+++ b/Core/1.10Classpath-Scanning-and-Managed-Components.md
@@ -175,7 +175,7 @@ public class AppConfig {
 </beans>
 ~~~
 
-    你也可以禁用默认的filters，通过设置useDefaultFilters=false在注解中或者设置<component-scan/> 中use-default-filters="false"的属性。 这样就会禁用@Component, @Repository, @Service, @Controller, 和@Configuration 注解.
+>你也可以禁用默认的filters，通过设置useDefaultFilters=false在注解中或者设置&lt;component-scan/> 中use-default-filters="false"的属性。 这样就会禁用@Component, @Repository, @Service, @Controller, 和@Configuration 注解.
 
 ## 1.10.5 在组件内部定义Bean元数据
 
