--- a/Core/1.12Java-based-Container-Configuration.md
+++ b/Core/1.12Java-based-Container-Configuration.md
@@ -667,7 +667,7 @@ public static void main(String[] args) {
 
 >@Configuration类中的构造函数注入仅在Spring Framework 4.3之后受支持。还要注意，如果目标bean只定义一个构造函数，则不需要指定@Autowired。在前面的示例中，RepositoryConfig构造函数上不需要@Autowired。
 
-**完全符合条件的mported beans，便于导航**
+**完全符合条件的imported beans，便于导航**
 
 在前面的场景中，使用@Autowired可以很好地工作并提供所需的模块性，但是确定在哪里声明autowired bean定义仍然有点含糊不清。例如，作为查看serviceConfig的开发人员，您如何确切知道@Autowired AccountRepositor bean的声明位置？它在代码中不是明确的，这可能很好。请记住，Spring工具套件提供了一种工具，它可以图形化的呈现显示所有东西是如何连接的，这可能是您所需要的全部。此外，您的Java IDE可以很容易地找到AccountRepository类型的所有声明和用法，并快速显示返回该类型的@Bean方法的位置。
 如果这种模糊性是不可接受的，并且您希望在您的IDE中从一个@Configuration类直接导航到另一个@Configuration类，请考虑自动连接配置类本身。以下示例显示了如何执行此操作：
