--- a/Core/1.13Environment-Abstraction.md
+++ b/Core/1.13Environment-Abstraction.md
@@ -330,7 +330,7 @@ public class AppConfig {
 }
 ~~~
 
-假设my.placeholder存在于已注册的某个属性源中（例如，系统属性或环境变量），则将占位符解析为相应的值。如果不是，则默认值/路径用作默认值。如果未指定默认值且无法解析属性，则将引发IllegalArgumentException。
+假设my.placeholder存在于已注册的某个属性源中（例如，系统属性或环境变量），则将占位符解析为相应的值。如果不是，则default/path用作默认值。如果未指定默认值且无法解析属性，则将引发IllegalArgumentException。
 
 >根据Java 8约定，@PropertySource注解是可重复的。但是，所有这样的@PropertySource注解都需要在同一级别声明，要么直接在配置类上声明，要么作为同一自定义注解中的元注解声明。不建议混合使用直接注解和元注解，因为直接注解有效地覆盖了元注解。
 
