--- a/Core/1.15Additional-Capabilities-of-the-ApplicationContext.md
+++ b/Core/1.15Additional-Capabilities-of-the-ApplicationContext.md
@@ -134,7 +134,7 @@ Ebagum lad, the 'userDao' argument is required, I say, required.
 
 >作为ResourceBundleMessageSource的替代方案，Spring提供了一个ReloadableResourceBundleMessageSource类。此变体支持相同的包文件格式，但比基于JDK的标准ResourceBundleMessageSource实现更灵活。特别是，它允许从任何Spring资源位置（不仅是从类路径）读取文件，并支持捆绑属性文件的热重新加载（同时有效地在两者之间缓存它们）。有关详细信息，请参阅ReloadableResourceBundleMessageSource javadoc。
 
-## 1.15.2 标准和之定义Events
+## 1.15.2 标准和自定义Events
 
 ApplicationContext中的事件处理通过ApplicationEvent类和ApplicationListener接口提供。如果实现ApplicationListener接口的bean部署到上下文中，则每次ApplicationEvent发布到ApplicationContext时，都会通知该bean。本质上，这是标准的观测者设计模式。
 
@@ -167,7 +167,7 @@ public class BlackListEvent extends ApplicationEvent {
 }
 ~~~
 
-若要发布自定义ApplicationEvent，请在ApplicationEventPublisher上调用PublishEvent（）方法。通常，这是通过创建一个实现ApplicationEventPublisheraware的类并将其注册为SpringBean来完成的。下面的示例显示了这样的类：
+若要发布自定义ApplicationEvent，请在ApplicationEventPublisher上调用PublishEvent（）方法。通常，这是通过创建一个实现ApplicationEventPublisherAware的类并将其注册为SpringBean来完成的。下面的示例显示了这样的类：
 
 ~~~
 public class EmailService implements ApplicationEventPublisherAware {
@@ -193,7 +193,7 @@ public class EmailService implements ApplicationEventPublisherAware {
 }
 ~~~
 
-在配置时，Spring容器检测到EmailService实现了ApplicationEventPublisheraware，并自动调用setapplicationEventPublisher（）。实际上，传入的参数是Spring容器本身。您正在通过其applicationEventPublisher接口与应用程序上下文进行交互。
+在配置时，Spring容器检测到EmailService实现了ApplicationEventPublisherAware，并自动调用setApplicationEventPublisher（）。实际上，传入的参数是Spring容器本身。您正在通过其applicationEventPublisher接口与应用程序上下文进行交互。
 
 要接收定制的applicationEvent，可以创建一个实现applicationListener的类，并将其注册为SpringBean。下面的示例显示了这样的类：
 
