--- a/Core/2.5ResourceLoaderAware.md
+++ b/Core/2.5ResourceLoaderAware.md
@@ -8,7 +8,7 @@ public interface ResourceLoaderAware {
 }
 ~~~
 
-当一个类实现了ResourceLoaderAware并被部署到application context，那么整个类就被识别问ResourceLoaderAware。 application context会去调用setResourceLoader(ResourceLoader)方法，并将其自身作为参数传入（所有的Spring application contexts 都实现了ResourceLoader 接口）。
+当一个类实现了ResourceLoaderAware并被部署到application context，那么整个类就被识别为ResourceLoaderAware。 application context会去调用setResourceLoader(ResourceLoader)方法，并将其自身作为参数传入（所有的Spring application contexts 都实现了ResourceLoader 接口）。
 
 因为ApplicationContext也是ResourceLoader，bean也可以实现ApplicationContextAware接口，然后直接使用提供的application context来加载资源。但是通常来说还是使用ResourceLoader来管理资源（代码会被转换为ResourceLoader而不是整个的ApplicationContext）。
 
