--- a/Core/2.7Application-Contexts-and-Resource-Paths.md
+++ b/Core/2.7Application-Contexts-and-Resource-Paths.md
@@ -97,7 +97,7 @@ ApplicationContext ctx =
 
 **通配符的其他关注点**
 
-注意，当与Ant样式模式结合使用时，除非实际目标文件位于文件系统中，否则classpath*:：在模式开始之前只能在至少有一个根目录的情况下可靠的执行。这意味着classpath*:*.xml等模式可能不会从jar文件的根目录中检索文件，而是只从扩展目录的根目录中检索文件。
+注意，当与Ant样式模式结合使用时，除非实际目标文件位于文件系统中，否则classpath*: 在模式开始之前只能在至少有一个根目录的情况下可靠的执行。这意味着classpath*:*.xml等模式可能不会从jar文件的根目录中检索文件，而是只从扩展目录的根目录中检索文件。
 
 Spring检索类路径条目的能力源自JDK的 ClassLoader.getResources()）方法，该方法只返回空字符串的文件系统位置（指示要搜索的潜在根）。Spring也评估了JAR文件中的URLClassLoader运行时配置和java.class.path清单，但这并不保证会导致可移植行为。
 
