--- a/Core/4.3Language-Reference.md
+++ b/Core/4.3Language-Reference.md
@@ -519,4 +519,68 @@ city = parser.parseExpression("PlaceOfBirth?.City").getValue(context, tesla, Str
 System.out.println(city);  // null - does not throw NullPointerException!!!
 ~~~
 
+## 4.3.16 集合选择
+
+Selection是一种功能强大的表达式语言功能，通过从源集合的条目中进行选择，可以将源集合转换为另一个集合。
+
+Selection使用的语法为.？[selectionExpression]。它过滤集合并返回包含原始元素子集的新集合。例如，selection可以让我们很容易地获得塞尔维亚发明家的列表，如下示例所示：
+
+~~~
+List<Inventor> list = (List<Inventor>) parser.parseExpression(
+        "Members.?[Nationality == 'Serbian']").getValue(societyContext);
+~~~
+
+在list和map上都可以Selection。对于list，将根据每个单独的列表元素评估选择条件。针对map，选择标准针对每个映射条目（Java类型Map.Entry）进行评估。每个map项都有其键和值，可以作为属性访问，以便在选择中使用。
+
+以下表达式返回一个新map，该映射由原始map的那些元素组成，其中输入值小于27：
+
+~~~
+Map newMap = parser.parseExpression("map.?[value<27]").getValue();
+~~~
+
+除了返回所有选定的元素之外，您还能检索第一个或最后一个值。要获取与所选内容匹配的第一个条目，语法为。.^[selectionExpression]。要获取最后一个匹配的选择，语法为.$[SelectionExpression]。
+
+## 4.3.17 集合投影
+
+Projection允许集合驱动子表达式的计算，结果是一个新集合。投影的语法是.![projectionExpression]。例如，假设我们有一个发明家列表，但是想要他们出生的城市列表。实际上，我们想为发明家列表中的每个条目评估“placeofbirth.city”。下面的示例使用投影进行此操作：
+
+~~~
+// returns ['Smiljan', 'Idvor' ]
+List placesOfBirth = (List)parser.parseExpression("Members.![placeOfBirth.city]");
+~~~
+
+您还可以使用map来驱动投影，在这种情况下，投影表达式针对map中的每个条目（表示为Java Map.Entry）进行评估。跨map投影的结果是一个列表，其中包含对每个map条目的投影表达式的计算。
+
+## 4.3.18 表达式模板化
+
+表达式模板允许将文本与一个或多个计算块混合。每个评估块都由您可以定义的前缀和后缀字符分隔。常见的选择是使用#{ }作为分隔符，如下示例所示：
+
+~~~
+String randomPhrase = parser.parseExpression(
+        "random number is #{T(java.lang.Math).random()}",
+        new TemplateParserContext()).getValue(String.class);
+
+// evaluates to "random number is 0.7038186818312008"
+~~~
+
+字符串的计算方法是将文本“random number is”与计算#{ }分隔符内表达式的结果（在本例中，是调用该random（）方法的结果）连接起来。parseExpression（）方法的第二个参数的类型为parserContext。ParserContext接口用于影响表达式的解析方式，以支持表达式模板化功能。TemplateParserContext的定义如下：
+
+~~~
+public class TemplateParserContext implements ParserContext {
+
+    public String getExpressionPrefix() {
+        return "#{";
+    }
+
+    public String getExpressionSuffix() {
+        return "}";
+    }
+
+    public boolean isTemplate() {
+        return true;
+    }
+}
+~~~
+
+
 
