--- a/Core/4.3Language-Reference.md
+++ b/Core/4.3Language-Reference.md
@@ -355,7 +355,7 @@ System.out.println(tesla.getName())  // "Mike Tesla"
 
 **#this和#root**
 
-#this始终是定义的，并引用当前的评估对象（不合格的引用将根据该对象进行解析）。#root变量总是被定义并引用根上下文对象。尽管#this可能会随着表达式的组件的计算而变化，但是#root始终引用根。以下示例说明如何使用#this和#root变量：
+\#this始终是定义的，并引用当前的评估对象（不合格的引用将根据该对象进行解析）。#root变量总是被定义并引用根上下文对象。尽管#this可能会随着表达式的组件的计算而变化，但是#root始终引用根。以下示例说明如何使用#this和#root变量：
 
 ~~~
 // create an array of integers
